Fix overflow in smaller screen sizes for landing page.

--- a/css/animate.css
+++ b/css/animate.css
@@ -23,7 +23,7 @@ Made by Ian Lunn - Web Designer & Front End Developer
   left: 0;
   right: 0;
   bottom: 0;
-  background: #d30035;
+  background: #007edc;
   height: 4px;
   -webkit-transform: translateY(4px);
   transform: translateY(4px);
