--- a/css/style.css
+++ b/css/style.css
@@ -1,121 +1,90 @@
-/*-------COLORS--------
-
-Attention Color: #d30035
-Background: #F4F4F4
-
-
-*/
-
-* {
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    
-}
-.clearfix {zoom: 1;}
-.clearfix:after {
-    content: '.';
-    clear: both;
-    display: block;
-    height: 0;
-    visibility: hidden;
-    overflow: hidden;
 }
 
+
+
 body{
-   font-size: 220%;
     font-family: 'Raleway',serif;
-    color: #373737 ;
-    background-color: #F4F4F4;
-    
-    /*#FFACAA*/
-    /* CHARCOL */
+    font-weight: 300;
+    font-size: 20px;
+    text-rendering: optimizeLegibility;
+}
+
+header{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.70),rgba(0, 0, 0, 0.7)),url(/images/desktop-view.jpg);
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+}
+
+.hero-text-box{
+    position: absolute;
+    width:100%;
+    top: 50%;
+    left:50%;
+    transform: translate(-50%,-50%);
+    text-align: center;
 }
 
 h1{
-
-    font-weight:bolder;
-    font-size: 60px;
-    color:white;
-    
-}
-
-#hero h2{
-    font-weight: bold;
-    color: #d30035;
-   
-    
-}
-
-img{
-    height: 300px;
-    width: auto;
-    object-fit: contain;
-}
-
-section{
-    padding: 50px 0;
-}
-
-p{
-    display: block;
-
-}
-
-
-
-
-/*----------Landing----------*/
-#hero{
-  
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url(/images/desktop-view.jpg); 
-    /*50% 0 repeat fixed;*/
-  background-size:cover;
-  background-position: center;
-  height: 100vh;
-    width: 100%;
-    
-    /*;
-    background-attachment: fixed;*/
-}
-
-.hero-text{   
-    left: 0;
-    line-height: 100px;
-    margin-top: -100px;
-    position: absolute;
-    text-align: center;
-    top: 50%;
-    width: 100%;
-    font-weight: bolder;
-}
-
-#hero button{
-    
-    padding: 5px 5px;
-    line-height: 50px;
-    background-color: transparent;
-    border: 3px solid red;
-    border-radius: 25px;
+    margin: 0;
+    font-size: 240%;
+    font-weight: 300;
     color: white;
-    transition: background-color 0.7s, border 0.7s, color 0.7s;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    word-spacing: 3px;
 }
 
-#hero button:hover{
-    color: #d30035;
-   
+h2{
+    color: #007edc;
+    font-size: 210%;
 }
 
-/*----------ABOUT----------*/
+
+
+.btn-round:link,
+.btn-round:visited{
+    display: inline-block;
+    font-weight: 300;
+    padding: 10px 30px;
+    text-decoration: none;
+    border-radius: 200px;
+    color: #fff; 
+}
+
+.btn-round-full:link,
+.btn-round-full:visited{
+  border: 1px solid #007edc;
+    color: #007edc;
+}
+
+.btn-round-ghost:link,
+.btn-round-ghost:visited{
+    border: 1px solid #007edc;
+    background-color: #007edc;
+    color: white;
+}
+
+.btn-round:hover,
+.btn-round:visited{
+    background-color: #003a65;
+    border: 1px solid #003a65;
+    
+}
+
+/****** ABOUT ******/ 
+
 #about{
     
     background-color: #F4F4F4;
-    background-size: cover;
+    
     width: auto;
     text-align: center;
     height: 100%;
-    margin-left: 10%;
-    margin-right: 10%;
     padding-top: -50px;    
 }
 
@@ -141,7 +110,7 @@ p{
     margin-right: 30px;
 }
 
-/*----------GALLERY----------*/
+/*******GALLERY******/
 
 #gallery{
     text-align: center;
@@ -157,20 +126,6 @@ p{
 #gallery h3{
     margin-bottom: 55px;
 }
-
-
-
-
-
-/*#gallery img:hover{
-    -webkit-transform: scale(1.15);
-    -ms-transform: scale(1.15);
-    transform: scale(1.15);
-    -webkit-transition: -webkit-transform 0.5s, opacity 0.5s;
-    
-    
-}*/
-
 
 .gallery-block{
     width: 300px;
@@ -217,7 +172,6 @@ p{
     
 }
 
-
 .title-block a
 {
     color:black;
@@ -226,11 +180,8 @@ p{
 }
 
 .title-block a:hover{
-    text-decoration: none;
-    
-   
+    text-decoration: none;  
 }
-
 /*----------CONTACT----------*/
 
 #contact{
@@ -263,6 +214,13 @@ textarea{
     margin-bottom: 10px;
 }
 
+.buttons{
+    
+    margin: 0 auto;
+    text-align: center;
+    
+}
+
 a.btn-default { height: 44px; border-radius: 0; border: 0; width: 250px; text-align: left; margin: 0 5px 10px 0; position: relative; background-color: #FFFFFF; padding: 10px; transition: all .35s; padding: 0; line-height: 47px; overflow: hidden; }
 a.btn-default i { display: block; float: left; position: absolute; left: 12px; top: 10px; font-size: 24px; color: #FFFFFF; position: relative; z-index: 1;  }
 a.btn-default span { position: relative; z-index: 1; padding-left: 30px; }
@@ -282,6 +240,3 @@ footer{
     text-align: center;
     font-size: 80%;
 }
-
-
-
